# Nmap Changelog ($Id$); -*-text-*-

o Updated the default ciphers list for Ncat and the secure ciphers list for
  Nsock to use "!aNULL:!eNULL" instead of "!ADH". With the addition of ECDH
  ciphersuites, anonymous ECDH suites were being allowed. [Daniel Miller]

o [NSE][GH#930] Fix ndmp-version and ndmp-fs-info when scanning Veritas Backup
  Exec Agent 15 or 16. [Andrew Orr]

o [NSE][GH#943] Added new SMB2/3 library and scripts:
  + smb-protocols discovers if a server supports dialects
    NT LM 0.12 (SMBv1), 2.02, 2.10, 3.00, 3.02 and 3.11.
  + smb2-time determines the current date and boot date of SMB2 servers.
  + smb2-capabilities lists the supported capabilities of SMB2/SMB3 servers.
  + smb2-security-mode determines the message signing configuration of
    SMB2/SMB3 servers.
  + smb2-vuln-uptime attempts to discover missing critical
    patches in Microsoft Windows systems based on the SMB2
    server uptime. [Paulino Calderon]

o [NSE][GH#950] Added wildcard detection to dns-brute. Only hostnames that
  resolve to unique addresses will be listed. [Aaron Heesakkers]

o [NSE] ftp-syst sends SYST and STAT commands to FTP servers to get system
  version and connection information. [Daniel Miller]

o [NSE] FTP scripts like ftp-anon and ftp-brute now correctly handle
  TLS-protected FTP services and use STARTTLS when necessary. [Daniel Miller]

o [NSE][GH#936] Function url.escape no longer encodes so-called "unreserved"
  characters, including hyphen, period, underscore, and tilde, as per RFC 3986.
  [nnposter]

o [NSE][GH#935] Function http.pipeline_go no longer assumes that persistent
  connections are supported on HTTP 1.0 target (unless the target explicitly
  declares otherwise), as per RFC 7230. [nnposter]

o [NSE][GH#934] The HTTP response object has a new member, version, which
  contains the HTTP protocol version string returned by the server, e.g. "1.0".
  [nnposter]

o [NSE] openwebnet-discovery retrieves device identifying information and