@@ -308,8 +308,8 @@ Content-Type: text/html; charset=UTF-8
   with only one client, and the
   <option>--keep-open</option><indexterm><primary><option>--keep-open</option> (Ncat option)</primary><secondary>not supported with UDP</secondary></indexterm>
   option doesn't work, the reason for this being that UDP has no notion
-  of a connection. UDP may not be combined with
-  SSL.<indexterm><primary>SSL</primary><secondary>not supported with UDP</secondary></indexterm>
+  of a connection. UDP may be secured by a form of SSL called Datagram TLS (DTLS)<indexterm><primary>DTLS</primary><secondary>Datagram TLS</secondary></indexterm>.
+  This is currently only supported in connect (client) mode.<indexterm><primary>SSL</primary><secondary>not supported with UDP in server mode</secondary></indexterm>
   </para>
 
   <para>
