@@ -82,6 +82,8 @@
 
 #undef HAVE_OPENSSL
 #undef HAVE_SSL_SET_TLSEXT_HOST_NAME
+#undef HAVE_DTLS_CLIENT_METHOD
+#undef HAVE_ALPN_SUPPORT
 
 #undef HAVE_EPOLL
 #undef HAVE_POLL
